# document-qa

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/rag/: agent.py  indexer.py  loader.py
src/telegram/: bot.py
